# anylabeling

./: .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  MANIFEST.in  README.md  anylabeling.desktop  anylabeling.spec  app.spec  borrador.py  borrador2.py  compile_languages.py  generate_languages.py  modify_json.py  opencv_dnn.sh  pyproject.toml  requirements-dev.txt  requirements-gpu-dev.txt  requirements-gpu.txt  requirements-macos-dev.txt  requirements-macos.txt  requirements.txt  setup.py  test_sam3_integration.py
.github/: FUNDING.yml
.github/workflows/: python-publish-cpu.yml  python-publish-gpu.yml  python-publish.yml  release-gpu.yml  release.yml  tests.yml
anylabeling/: __init__.py  __main__.py  app.py  app_info.py  config.py  storage.py  utils.py
anylabeling/configs/: anylabeling_config.yaml  autolabel_segment_anything.yaml  autolabel_yolov5l.yaml  autolabel_yolov5m.yaml  autolabel_yolov5n.yaml  autolabel_yolov5s.yaml  autolabel_yolov5x.yaml  autolabel_yolov8l.yaml  autolabel_yolov8m.yaml  autolabel_yolov8n.yaml  autolabel_yolov8s.yaml  autolabel_yolov8x.yaml
anylabeling/configs/auto_labeling/: models.yaml  segment_anything_vit_b.yaml  segment_anything_vit_b_quant.yaml  segment_anything_vit_h_quant.yaml  segment_anything_vit_l.yaml  segment_anything_vit_l_quant.yaml  yolov5l-seg.yaml  yolov5m-seg.yaml  yolov5n-seg.yaml  yolov5s-seg.yaml  yolov5x-seg.yaml  yolov5x.yaml  yolov8m.yaml  yolov8x-seg.yaml  yolov8x.yaml
anylabeling/locale/: en_US.ts  vi_VN.qm  vi_VN.ts  zh_CN.ts
anylabeling/resources/: resources.py  resources.qrc
anylabeling/resources/images/: icon.icns
anylabeling/resources/translations/: en_US.ts  vi_VN.qm  vi_VN.ts  zh_CN.qm  zh_CN.ts
anylabeling/services/: yolov5.py
anylabeling/services/auto_labeling/: __init__.py  lru_cache.py  model.py  model_manager.py  registry.py  sam2_coreml.py  sam2_onnx.py  sam3_onnx.py  sam_onnx.py  segment_anything.py  types.py  yolov5.py  yolov5_seg.py  yolov8.py
anylabeling/styles/: __init__.py  theme.py
anylabeling/views/: maintabs.py  mainwindow.py  mainwindow_tabs.py
anylabeling/views/common/: tableview.py  toaster.py
anylabeling/views/labeling/: __main__.py  config.py  label_file.py  label_widget.py  label_wrapper.py  labeling_wrapper.py  logger.py  shape.py
anylabeling/views/labeling/labelme/: __init__.py  __main__.py  config.py  labelme_widget.py  logger.py  shape.py  tracker.py
anylabeling/views/labeling/labelme/translate/: zh_CN.ts
anylabeling/views/labeling/labelme/utils/: _io.py  opencv.py  qt.py
anylabeling/views/labeling/labelme/widgets/: __init__.py  brightness_contrast_dialog.py  escapable_qlist_widget.py  label_dialog.py  label_list_widget.py  toolbar.py  unique_label_qlist_widget.py  zoom_widget.py
anylabeling/views/labeling/translate/: empty.ts  zh_CN.ts
anylabeling/views/labeling/utils/: __init__.py  export_formats.py  export_worker.py  image.py  opencv.py  qt.py  shape.py
anylabeling/views/labeling/widgets/: __init__.py  brightness_contrast_dialog.py  canvas.py  canvas3d.py  color_dialog.py  escapable_qlist_widget.py  export_dialog.py  file_dialog_preview.py  label_dialog.py  label_list_widget.py  toolbar.py  unique_label_qlist_widget.py  zoom_widget.py
anylabeling/views/labeling/widgets/auto_labeling/: __init__.py  auto_labeling.py  auto_labeling.ui
docs/: macos_folder_mode.md
rthooks/: rthook_onnxruntime.py
sample_meshes/: README.md
scripts/: build_and_publish_pypi.sh  build_macos_folder.sh  clean_up.sh  code_score.sh  compile_languages.py  format_code.sh  generate_languages.py  zip_models.py
tests/: test_canvas3d.py  test_label_colormap.py  test_lru_cache.py  test_model_manager.py  test_real_inference.py  test_registry.py  test_sam3_auto_detection.py  test_sam3_onnx_unit.py  test_segment_anything_utils.py  test_types.py
